<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    android:background="@color/black"
    >

    <TableRow>
        <EditText
            android:id="@+id/etResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:phoneNumber="true"
            android:layout_span="4"
            android:padding="@dimen/padding40"
            android:background="@color/grey_47"
            android:text="0"
            android:textColor="@color/white"
            android:gravity="right"
            android:textSize="@dimen/textSize"
            />
    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/btnNull"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@null"
            android:layout_span="3"
            android:padding="@dimen/padding20"
            android:background="@color/black_222"
            android:layout_margin="@dimen/margin2"
            />

        <Button
            android:id="@+id/btnDel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtDel"
            android:padding="@dimen/padding20"
            android:background="@drawable/changebackground"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin2"
            />
    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/btn7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn7"
            android:textSize="@dimen/textSize"
            android:padding="@dimen/padding30"
            android:background="@drawable/changebackground"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin2"
            />

        <Button
            android:id="@+id/btn8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn8"
            android:textSize="@dimen/textSize"
            android:padding="@dimen/padding30"
            android:background="@drawable/changebackground"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin2"
            />

        <Button
            android:id="@+id/btn9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn9"
            android:textSize="@dimen/textSize"
            android:padding="@dimen/padding30"
            android:background="@drawable/changebackground"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin2"
            />

        <Button
            android:id="@+id/btnDev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnDev"
            android:textSize="@dimen/textSize"
            android:padding="@dimen/padding30"
            android:background="@drawable/changebackground"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin2"
            />
    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/btn4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn4"
            android:textSize="@dimen/textSize"
            android:padding="@dimen/padding30"
            android:background="@drawable/changebackground"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin2"
            />

        <Button
            android:id="@+id/btn5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn5"
            android:textSize="@dimen/textSize"
            android:padding="@dimen/padding30"
            android:background="@drawable/changebackground"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin2"
            />

        <Button
            android:id="@+id/btn6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn6"
            android:textSize="@dimen/textSize"
            android:padding="@dimen/padding30"
            android:background="@drawable/changebackground"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin2"
            />

        <Button
            android:id="@+id/btnMul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnMul"
            android:textSize="@dimen/textSize"
            android:padding="@dimen/padding30"
            android:background="@drawable/changebackground"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin2"
            />
    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn1"
            android:textSize="@dimen/textSize"
            android:padding="@dimen/padding30"
            android:background="@drawable/changebackground"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin2"
            />

        <Button
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn2"
            android:textSize="@dimen/textSize"
            android:padding="@dimen/padding30"
            android:background="@drawable/changebackground"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin2"
            />

        <Button
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn3"
            android:textSize="@dimen/textSize"
            android:padding="@dimen/padding30"
            android:background="@drawable/changebackground"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin2"
            />

        <Button
            android:id="@+id/btnSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSub"
            android:textSize="@dimen/textSize"
            android:padding="@dimen/padding30"
            android:background="@drawable/changebackground"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin2"
            />
    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/btnPoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnPoint"
            android:textSize="@dimen/textSize"
            android:padding="@dimen/padding30"
            android:background="@drawable/changebackground"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin2"
            />

        <Button
            android:id="@+id/btn0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn0"
            android:textSize="@dimen/textSize"
            android:padding="@dimen/padding30"
            android:background="@drawable/changebackground"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin2"
            />

        <Button
            android:id="@+id/btnResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnResult"
            android:textSize="@dimen/textSize"
            android:padding="@dimen/padding30"
            android:background="@drawable/changebackground"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin2"
            />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnAdd"
            android:textSize="@dimen/textSize"
            android:padding="@dimen/padding30"
            android:background="@drawable/changebackground"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin2"
            />
    </TableRow>

</TableLayout>